Revision history for {{$dist->name}}

{{$NEXT}}

0.30 2013-09-21 06:00:47

    - Update docs to indicate that we don't use VersionFromPrev, which
      we haven't in *forever*.

0.29 2013-09-21 05:49:37

    - Add the no_Authority option which can be used to disable the
      "Authority" module.

    - Stop whining if github is used as a bugtracker, I'm not a child.

0.28 2013-01-14 11:56:10

    - Disable InstallRelease unless install_command is set

0.27 2013-01-14 08:21:25

    - Add InstallRelease with install_command = "cpanm ."

    - Replace CompileTests with Test::Compile as CompileTests is deprecated

    - Read dist and authority from dzil config and github_user from git config
      github.user or $ENV{GITHUB_USER}

0.26 2011-07-29 01:54:18

    - Update dist to match Prereq -> Prereqs change

    - Use Plugin::Git::NextVersion from PluginBundle::Git instead of
      Plugin::BumpVersionFromGit, and set first_version to '0.01'

    - Change the default homepage to use metacpan.org

0.24 2010-10-07 16:07:09

    - Use BumpVersionFromGit instead of VersionFromPrev. It uses
      Version::Next, which supports GNU-style (e.g. 1.2.2) versions.

0.23 2010-06-22 18:10:37

    - Make [NextRelease] format=* and [Git] tag_message configurable
      for Hinrik.

0.22 2010-06-21 17:48:10

    - authority= parameter to override Authority's authority param.

0.21 2010-06-21 17:10:32

    - Fix POD typo pointed out by Hinrik

0.20 2010-06-18 13:01:23

    - Make the AVAR: die() a warn(). dngor's snerp-vortex is still
      using this.

    - Fix META validation errors. Remove Ratings entry, and
      bugtracker.web, not bugtracker.url.

0.19 2010-05-27 19:32:08

    - Use v3-like repo/bugtracker metadata. And use Authority too.

0.18 2010-05-26 12:38:13

    - Use RT, not Github as the bugtracker by default

0.17 2010-05-01 21:24:30

    - Re-release due to Makefile.PL breakage caused by Dist::Zilla
      FAIL: http://github.com/rjbs/dist-zilla/commit/2e47b6c205
