@@ -1,1 +1,3 @@
+.*.sw[nop]
+.build/
 Dist-Zilla-PluginBundle-AVAR-*
